# ros_arm

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: package.sh  package.xml
install/diff_bot/share/diff_bot/: package.sh
install/hello_moveit/lib/hello_moveit/: hello_moveit
log/: latest_build  latest_list
src/cpp_pubsub/: CMakeLists.txt
src/hello_moveit/src/: hello_moveit.cpp  kdl_parser.cpp  r6bot.urdf.xacro
src/ros_arm_bringup/: CMakeLists.txt
src/ros_arm_bringup/launch/: controllers.launch.py  gazebo.launch.xml
src/ros_arm_description/: CMakeLists.txt
src/ros_arm_description/config/: r6bot_controllers.yaml
src/ros_arm_description/launch/: display.launch.xml
src/ros_arm_description/urdf/: r6bot.urdf.xacro  r6bot_.urdf  r6bot_description.urdf.xacro  ros2_control.xacro
src/ros_arm_kdl/: CMakeLists.txt  package.xml
src/ros_arm_kdl/src/: geometry_pont_publisher.cpp  ros_arm_kdl.cpp
src/ros_arm_moveit/: .setup_assistant  CMakeLists.txt
src/ros_arm_moveit/config/: moveit_controllers.yaml  r6bot.ros2_control.xacro  r6bot.srdf  ros2_controllers.yaml
src/ros_arm_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py
src/ros_arm_moveit_config/: .setup_assistant  CMakeLists.txt
src/ros_arm_moveit_config/config/: kinematics.yaml  r6bot.ros2_control.xacro
src/ros_arm_moveit_config/launch/: moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
(+96 files in other folders)
